--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,40 @@
-# Logs
-logs
-*.log
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+node_modules
+
+# testing
+coverage
+
+# production
+dist
+
+# misc
+.DS_Store
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# env
+.env
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
+# artifacts/cache/data
+artifacts
+!projects/aggregator-executor/artifacts
+
+cache
+!projects/aggregator-executor/cache
+
+
+coverage.json
+
+@openzeppelin
+!projects/aggregator-executor/artifacts/@openzeppelin
+@pancakeswap
+bsc-library
+
+Flatten*
+
 .idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
