--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,24 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-node_modules
-
-# testing
-coverage
-
-# production
-dist
-
-# misc
-.DS_Store
-
-# debug
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# env
-.env
+node_modules
+dist
+dist-ssr
+*.local
 
-# artifacts/cache/data
-artifacts
-!projects/aggregator-executor/artifacts
-
-cache
-!projects/aggregator-executor/cache
-
-
-coverage.json
-
-@openzeppelin
-!projects/aggregator-executor/artifacts/@openzeppelin
-@pancakeswap
-bsc-library
-
-Flatten*
-
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
 .idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
