--- a/package.json
+++ b/package.json
@@ -1,26 +1,41 @@
 {
-  "name": "@icecreamswap/contracts",
-  "version": "1.0.0",
-  "description": "IceCreamSwap contracts",
+  "name": "modern-dex-interface",
   "private": true,
-  "workspaces": [
-    "projects/**"
-  ],
-  "repository": "https://github.com/IceCreamSwapCom/IceCreamSwap-smart-contracts",
-  "author": "IceCreamSwap",
-  "license": "MIT",
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "format:check": "prettier --check ./**/*.{js,ts,sol}",
-    "format:write": "prettier --write ./**/*.{js,ts,sol}",
-    "compile": "yarn workspaces run compile"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@rainbow-me/rainbowkit": "^1.0.11",
+    "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
+    "ethers": "^6.11.1",
+    "lightweight-charts": "^4.1.3",
+    "lucide-react": "^0.344.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "viem": "^1.19.11",
+    "wagmi": "^1.4.7"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-ethers": "^3.0.5",
-    "@nomicfoundation/hardhat-verify": "^2.0.4",
-    "ethers": "^6.11.1",
-    "hardhat": "^2.20.1",
-    "prettier": "^3.2.5",
-    "prettier-plugin-solidity": "^1.3.1",
-    "ts-node": "^10.9.2"
+    "@eslint/js": "^9.9.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "globals": "^15.9.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.3.0",
+    "vite": "^5.4.2"
   }
 }
